Fixing OverFlow error on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,7 +10,8 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
